--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,5 +48,6 @@ jobs:
           git config --local user.email "${GITHUB_EMAIL}"
           git remote set-url origin git@github.com:ns2039/gityb_actions.git
           git add -f docs
+          git add .
           git commit -m "auto deploy"
           git push -f origin HEAD:branch
